--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
