--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.19.4",
+    "@google/genai": "^0.14.1",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.6",
@@ -24,6 +25,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "lucide-react": "^0.510.0",
+    "mime": "^4.0.7",
     "next": "15.2.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
